# branch-to-the-future

./: .env.example  .gitignore  AGENTS.md  CODEX_CONTEXT.md  Cargo.toml  Makefile  README.md  branch-to-the-future-prd.md  branch_futures_prd.md
output/: tachyonfx_github_data.json
output/tachyonfx/: SKILL.md
output/tachyonfx-openai/: openai_metadata.json
output/tachyonfx-openai/vector_store_files/: issues.md
output/tachyonfx/references/: CHANGELOG.md  file_structure.md  releases.md
sample-repos/resume-interview/: branch-futures-report.md  branch-to-the-future-report.md  package.json  tsconfig.json
sample-repos/resume-interview/app/: page.tsx
sample-repos/resume-interview/app/api/feedback/: route.ts
sample-repos/resume-interview/app/api/upload/: route.ts
sample-repos/resume-interview/components/: FeedbackPanel.tsx  UploadForm.tsx
sample-repos/resume-interview/db/: schema.sql
sample-repos/resume-interview/lib/: openai.ts  parser.ts  s3.ts
sample-repos/resume-interview/tests/: upload.test.ts
sample-repos/resume-interview/workers/: parser.ts
src/: ai.rs  app.rs  artifacts.rs  cli.rs  domain.rs  fx.rs  lib.rs  main.rs  repo.rs  repo_source.rs  ui.rs
tests/: mvp.rs
