[package]
name = "branch-to-the-future"
version = "0.1.0"
edition = "2021"

[lib]
name = "branch_futures"
path = "src/lib.rs"

[[bin]]
name = "brf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
ignore = "0.4"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tachyonfx = "0.25"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
